$Id$

Summary of Changes for DuroDBMS

Changes for DuroDBMS 0.17

- index_of() operator supports searching in arrays

- KEY no longer mandatory when creating real or private tables
  even when there is no INIT value

- IMPLEMENT TYPE now supports multiple possible representations

Changes for DuroDBMS 0.16

- Components are now accessed directly by their names in type constraints.

- durodump.tcl exports only real tables.

- IMPLEMENT TYPE now requires END IMPLEMENT.

- Duro D/T: Added DEFAULT, FOREACH loop, INDEX, DROP INDEX, EXPLAIN

- Duro D/T now uses GNU readline, providing keyword completion.
  (Not under MS Windows)

- Added TCLOSE, MATCHING, NOT MATCHING

- Renamed RDB_drop_expr() to RDB_del_expr() for consistency.

- RDB_get_table() now raises a name_error if the table is not found.

- Dropped database SYS_DB.

Changes for Duro 0.15

- Replaced PRINT/PRINTLN/READLN by put/put_line/get_line.

- Changed WITH and EXTEND syntax according to Database Explorations.

- Duro D/T now supports headings in relation selectors.

- Duro D/T sets LC_CTYPE and LC_COLLATE locales according to the environment.

- Explicit BEGIN TRANSACTION no longer required in Duro D/T for invoking
  user-defined operators and using user-defined types.

- Built-in types and operators are now lowercase, Duro D/T converts identifiers to lowercase.

- Renamed RDB_create_XXX functions for non-scalar types to RDB_new_XXX.

- Added RDB_del_nonscalar_type(). Changed RDB_drop_type to support only user-defined types.

- Replaced iargp and iarglen parameters of RDB_create_ro_op() and RDB_create_update_op()
  by explicit source code parameter.

- Trace output can be enabled using RDB_env_trace() and trace().

- Tuple JOIN is now tuple UNION.

- Added RDB_is_selector().

- Removed RDB_tx_env().

- Added aggregate operators AND and OR as synonyms for ALL and ANY.

- Added XOR.

- Changed interface and calling conventions for user-defined operators.
